syntax = "proto3";

import "google/protobuf/timestamp.proto";

// This section will be completed in the second iteration of the CS
service GoCalendar {
    // Search returns a Google search result for the query.
    rpc NewEvent(Event) returns (Resposne) {}
    rpc GetEvent(Event) returns (Resposne) {}
    rpc UpdateEvent(Event) returns (Resposne) {}
    rpc DeleteEvent(Event) returns (Resposne) {}
    rpc ListEvents(Event) returns (Resposne) {}
}
  
message Event {
    int64 id = 1;
    string user = 2;
    string eventName = 3;
    string note = 4;
//    type date = 4;
}

message Resposne {
    string code = 1;
    string error = 2;
}
